# mapping-project

./: .gitignore  A page of mapping.html  Index.html  README.md  about.html  index.html  pyproject.toml
python mapping/: Creating KML file using geodesic funtion.ipynb  Example Python Scripts.ipynb  Simon's Map Animation-Copy1.ipynb  Simon's Map Animation.html  Simon's Map Animation.ipynb  Simon's Map.ipynb  Untitled.ipynb  curves_dir.py  output.kml
python mapping/.ipynb_checkpoints/: Creating KML file using geodesic funtion-checkpoint.ipynb  Example Python Scripts-checkpoint.ipynb  Simon's Map Animation-Copy1-checkpoint.ipynb  Simon's Map Animation-checkpoint.ipynb  Simon's Map-checkpoint.ipynb  Untitled-checkpoint.ipynb
python mapping/Data/: SW-J flight travel.csv  SW-J flight travel.xls  SW-J flight travel.xlsx
python mapping/ffmpeg-20160924-267da70-win64-static/: README.txt
python mapping/ffmpeg-20160924-267da70-win64-static/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffmpeg-formats.html  ffprobe-all.html
python-mapping/: flights-exploration.ipynb  flights-sample.js  flights.html  flights.json
python-mapping/data/: SW-J flight travel.csv  SW-J flight travel.numbers  SW-J flight travel.xlsx  global_airports.csv
