[tool.poetry]
name = "mapping-project"
version = "0.1.0"
description = ""
authors = ["Simon Ward-Jones <simonwardjones@yahoo.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
notebook = "^6.4.12"
plotly = "^5.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
